# WIFA_UQ

./: .devcatrc  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  UQ_calibration_framework.ipynb  generalize_database_creation.py  mkdocs.yml  perform_PCE_on_database.py  pyproject.toml  pywake_runner.py  sampling_for_least_squares.py  todo.md
.github/workflows/: ci.yml
1WT_simulations/result_code_saturne_1WT_LIGHT/: Plot2Dmap_from_interpolated_flowfield.py
1WT_simulations/result_code_saturne_1WT_LIGHT/MeteoFiles/: meteo_file_000005.csv  meteo_file_000009.csv  meteo_file_000019.csv  meteo_file_000024.csv  meteo_file_000025.csv  meteo_file_000030.csv  meteo_file_000046.csv  meteo_file_000051.csv  meteo_file_000056.csv  meteo_file_000058.csv  meteo_file_000075.csv  meteo_file_000076.csv  meteo_file_000077.csv  meteo_file_000078.csv  meteo_file_000084.csv  meteo_file_000089.csv  meteo_file_000093.csv  meteo_file_000099.csv  meteo_file_000104.csv
1WT_simulations/windIO_1WT/plant_energy_resource/: 1WT_calibration_data_IEA15MW.nc  FLOW_toy_study_energy_resource.yaml
1WT_simulations/windIO_1WT/plant_energy_site/: FLOW_toy_study_energy_site.yaml
1WT_simulations/windIO_1WT/plant_wind_farm/: FLOW_toy_study_wind_farm.yaml
1WT_simulations/windIO_1WT/wind_energy_system/: analysis.yaml
docs/: index.md
docs/appendix/: metadata_note.md  troubleshooting.md
docs/concepts/: calibration_theory.md  model_bias.md  overview.md  uncertainty_quantification.md  windio_integration.md
docs/dependencies/: quickstart.md
docs/getting_started/: installation.md
docs/reference/: config_schema.md  database_format.md  swept_parameters.md
docs/tutorials/: index.md  single_farm_xgb.md
docs/user_guide/: configuration.md  database_generation.md  multi_farm_workflows.md  preprocessing.md  sensitivity_analysis.md
docs/user_guide/calibration/: global_calibration.md  local_calibration.md
docs/user_guide/error_prediction/: cross_validation.md  feature_engineering.md  ml_models.md
docs/workflow/: project_structure.md
examples/: config_creation.ipynb  edf_single_farm_example.yaml  err_prediction_example.yaml  example_bayesian_calibration.ipynb  farm_runner.py  kul_les_example.yaml  kul_single_farm_xgb_example.yaml  main.py  multi_farm_example.yaml  physics_insights.yaml  run.py
examples/1WT_simulations/result_code_saturne_1WT_LIGHT/: README.md
examples/EDF_datasets/NYSTED1/: turbine_data.nc
examples/EDF_datasets/NYSTED2/: wind_farm.yaml
examples/EDF_datasets/VirtWF_ABL_IEA10/: energy_resource.yaml  meta.yaml
examples/EDF_datasets/VirtWF_ABL_IEA15_ali_DX5_DY5/: IEA15MW_turbine.yaml  analysis_pywake.yaml  energy_site.yaml  wind_energy_system.yaml
examples/EDF_datasets/VirtWF_ABL_IEA15_stag_DX5_DY7p5/: FLOW_energy_resource.yaml
examples/EDF_datasets/VirtWF_ABL_IEA22/: IEA22MW_turbine.yaml  wind_energy_system.yaml  wind_farm.yaml
examples/data/EDF_datasets/: results_stacked_hh.nc
examples/data/farm_simulations/: README.md
examples/previous_scripts/: generalize_database_creation.py
examples/torque_workflow/: config_creation.ipynb  err_prediction_example.yaml  main.py
farm_simulations/: README.md
farm_simulations/Result_code_saturne_Farm_calibration_data_LIGHT/: one_time_extractor.py
farm_simulations/Result_code_saturne_Farm_calibration_data_LIGHT/MeteoFiles/: meteo_file_000001.csv
farm_simulations/Result_code_saturne_Farm_calibration_data_LIGHT/farm_result/: turbine_data_staggered_DX5D_DY5D_Turbine_NumberNumber4.nc
farm_simulations/windio_Farm_ABL_IEA15/plant_wind_farm/: FLOW_wind_farm_staggered_DX5D_DY5D_Turbine_Number25.yaml  FLOW_wind_farm_staggered_DX5D_DY5D_Turbine_Number4.yaml  (+1 more)
model_error_database/: .~lock.cv_metrics.csv#  .~lock.cv_metrics_linear_reduced.csv#  1-preprocessing_physical_inputs.ipynb  2-main.py  3-error_predictor.ipynb  a_preprocessing_physical_inputs.py  analysis.ipynb  b_main.py  c_error_predictor.py  checking_outputs.ipynb  cv_metrics.csv  cv_metrics_linear_reduced.csv  cv_metrics_xgb.csv  database_EDA.ipynb  db_EDA.ipynb  db_output_analysis.ipynb  error_predictor.py  layout_features_demo.ipynb  readme.md  results_stacked_fullprofile.nc  results_stacked_hh.nc  results_stacked_hh_best_sample.nc  results_stacked_hh_default_sample.nc  run_pywake_sweep.py  utils.py
model_error_database/Notebooks/: ad_hoc_calibration_dim_reduction.ipynb  b_main_default.py  db_EDA.ipynb  dim_reduction_demo.ipynb  group_kfold_demo.ipynb  layout_features_demo.ipynb  predictor_demonstration.ipynb
model_error_database/results/: output.yaml  turbine_data.nc
result_code_saturne_1WT_LIGHT/: PlotProfiles_from_flowfield.py  README.md  README.txt  single_time_flow_field.nc  single_time_flow_field_interpolated.nc
result_code_saturne_1WT_LIGHT/MeteoFiles/: meteo_file_000063.csv  meteo_file_000071.csv  meteo_file_000095.csv  meteo_file_000105.csv
src/model_error_database/: database_gen.py  utils.py
tests/: conftest.py  test_all_example_system_schemas.py
tests/integration/: test_workflow.py
tests/unit/: test_calibration_basic.py  test_config_schema.py  test_database_gen.py  test_error_predictor_core.py  test_error_predictor_cv.py  test_error_predictor_extended.py  test_error_predictor_models.py  test_multi_farm_gen.py  test_observation_sensitivity.py  test_path_inference.py  test_pce_utils_comprehensive.py  test_physics_insights.py  test_preprocessing.py  test_run_pywake_sweep.py  test_run_sweep.py  test_workflow_error_prediction.py  test_workflow_helpers.py  test_workflow_multi_farm.py  test_workflow_single_farm.py
wifa-uq/postprocessing/: postprocesser.py
wifa_uq/: workflow.py  workflow_schema.py
wifa_uq/model_error_database/: __init__.py  database_gen.py  error_predictor.py  main.py  multi_farm_gen.py  path_inference.py  readme.md  run_pywake_sweep.py  run_sweep.py  utils.py
wifa_uq/postprocessing/: postprocesser.py
wifa_uq/preprocessing/: preprocessing.py
windIO_1WT/plant_energy_resource/: 1WT_calibration_data_IEA15MW.nc
windIO_1WT/wind_energy_system/: analysis.yaml  system.yaml
(+290 files in other folders)
