# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifa_uq"
version = "0.1"
authors = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"},
  {name = "Frederik Aerts"},
  {name = "Antoine Mathieu"},
]
maintainers = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"},
  {name = "Antoine Mathieu"},
]
description = "Uncertainty Quantification with WIFA"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Uncertainty Quantification"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "py_wake>=2.6.5",
    "foxes>=1.2.3",
    #"windIO @ git+https://github.com/EUFLOW/windIO@c119eedd7bc1ee6a929c19eef44c5eb1abb81b57",
    "wayve @ git+https://gitlab.kuleuven.be/TFSO-software/wayve@d4ccdb3e0c02114565e490d7c512b6082abc70d5",
    "wifa @ git+https://github.com/EUFLOW/WIFA@241689074ecccea5f8199c2f6b1ce56708770737",
    "umbra @ git+https://github.com/mworchel/umbra@073bf90b4d53dc653921ba705739a69ca54f0637",
    "sliced @ git+https://github.com/kilojoules/sliced@ee892bdbde4caf66e8afe5ce7bf48367d0ef6273",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
]
dev = [
    "objsize",
    "jupyter",
    "ncplot",
    "nctoolkit",
    "cartopy",
    "openturns",
]

[project.urls]
Homepage = "https://github.com/EUFLOW/WIFA-UQ/"
Repository = "https://github.com/EUFLOW/WIFA-UQ.git"
"Bug Tracker" = "https://github.com/EUFLOW/WIFA-UQ/issues"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs", "recipe", "results", "output"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "~=3.12.0"
hdf5 = "*"
netcdf4 = "*"
scikit-learn = ">=1.7.2,<2"
xgboost = "~=2.0.3"
shap = ">=0.48.0,<0.49"
llvmlite = ">=0.45.1,<0.46"
numba = ">=0.62.1,<0.63"
numpy = "*"
openturns = ">=1.26,<2"
pytest = ">=9.0.1,<10"
pytest-cov = ">=7.0.0,<8"

[tool.pixi.pypi-dependencies]
wifa_uq = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
install-devcat = "cargo install --git https://github.com/kilojoules/devcat"
test = "pytest tests/unit -v"
test-cov = "pytest tests/unit -v --cov=wifa_uq --cov-report=term --cov-report=html"
test-all = "pytest tests/ -v"
lint = "pycodestyle wifa_uq --max-line-length=120 --ignore=E501,W503"
